--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -11,10 +11,10 @@ Description
     <body>
         <h1> Patient Medical Form</h1>
     <form>
-        <label for = "fname">First Name:</label></br>
-            <input type = "text" id = "fname" name = "fname" required>
-        <label for = "miname"> M.Initial:</label>
-            <inpu
+        <label for = "fname">First Name:</label>
+            <label for = "midname"> M.Initial:</label><br>
+        <input type = "text" id = "fname" name = "fname" required>
+            <input type = "text" id = "midname" name = "midname">
     </form>
 
           
