--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -12,9 +12,11 @@ Description
         <h1> Patient Medical Form</h1>
     <form>
         <label for = "fname">First Name:</label>
-            <label for = "midname"> M.Initial:</label><br>
+            <label for = "midname"> M.Initial:</label>
+                <label for = "laname"> Last Name:</label>
         <input type = "text" id = "fname" name = "fname" required>
             <input type = "text" id = "midname" name = "midname">
+                <input type = "text" id = "lname" name = "lname">
     </form>
 
           
