--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -16,7 +16,7 @@ Description
                 <label for = "laname"> Last Name:</label>
         <input type = "text" id = "fname" name = "fname" required>
             <input type = "text" id = "midname" name = "midname">
-                <input type = "text" id = "lname" name = "lname">
+                <input type = "text" id = "lname" name = "lname"><br>
     </form>
 
           
