--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -11,12 +11,23 @@ Description
     <body>
         <h1> Patient Medical Form</h1>
     <form>
-        <label for = "fname">First Name:</label>
-            <label for = "midname"> M.Initial:</label>
-                <label for = "laname"> Last Name:</label>
+        <label for = "fname">First Name/ </label>
+            <label for = "midname"> M.Initial/ </label>
+                <label for = "laname"> Last Name/</label>
         <input type = "text" id = "fname" name = "fname" required>
             <input type = "text" id = "midname" name = "midname">
-                <input type = "text" id = "lname" name = "lname"><br>
+                <input type = "text" id = "lname" name = "lname" required><br><br>
+
+        <label for = "bdate">Date of Birth: </label>
+            <input type = "text" id = "bdate" placeholder="MM/DD/YYYY"><br><br>
+
+        <label for ="ss">Social Security:</label>
+            <input type = "text" id = "ss" placeholder ="123-45-6789"><br><br>
+
+        <label for = "address">Address Line 1:</label>
+            <input type = "text" id = "address"><br><br>
+                <label for = "address">Address Line 2:</label>
+                    <input type = "text" id = "address"><br>
     </form>
 
           
