yup i changed it

--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -27,7 +27,12 @@ Description
         <label for = "address">Address Line 1:</label>
             <input type = "text" id = "address"><br><br>
                 <label for = "address">Address Line 2:</label>
-                    <input type = "text" id = "address"><br>
+                    <input type = "text" id = "address"><br><br>
+
+        <label for = "city">City:</label>
+            <input type = "text" id = "city">
+                <label for = "state"> State:</label>
+                    
     </form>
 
           
