--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -14,9 +14,9 @@ Description
         <label for = "fname">First Name/ </label>
             <label for = "midname"> M.Initial/ </label>
                 <label for = "laname"> Last Name/</label>
-        <input type = "text" id = "fname" name = "fname" required>
+                <input type = "text" id = "fname" name = "fname" required>
             <input type = "text" id = "midname" name = "midname">
-                <input type = "text" id = "lname" name = "lname" required><br><br>
+        <input type = "text" id = "lname" name = "lname" required><br><br>
 
         <label for = "bdate">Date of Birth: </label>
             <input type = "text" id = "bdate" placeholder="MM/DD/YYYY"><br><br>
@@ -32,6 +32,7 @@ Description
         <label for = "city">City:</label>
             <input type = "text" id = "city">
                 <label for = "state"> State:</label>
+                    <select id = "state" required>
                     
     </form>
 
