--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -9,7 +9,11 @@ Description
 -->
 <html>
     <body>
-        <h1> Patient Medical Form</h1>
+        <h1> Patient Medical Form</h1> 
+        <p>Today's Date: <span id="date"></span></p>
+            <script>
+                document.getElementById("date").innerHTML = new Date().toLocaleDateString();
+            </script>  
     <form>
         <label for = "fname">First Name/ </label>
             <label for = "midname"> M.Initial/ </label>
