--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -89,9 +89,11 @@ Description
                             <option value="WV">West Virginia</option>
                             <option value="WI">Wisconsin</option>
                             <option value="WY">Wyoming</option>
+                            </select>
+        <label for = "zip">Zip Code:</label>
+            <input type = "text" id= "zip"><br><br>
                     
     </form>
-
           
     </body>
 </html>
