--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -13,6 +13,7 @@ Description
         <p>Today's Date: <span id="date"></span></p>
             <head>
                 <link rel = "stylesheet" href = "HW1CSS.css">
+                <Link rel = "stylesheet" href = "med.png">
             </head>
         <script>
             document.getElementById("date").innerHTML = new Date().toLocaleDateString();
