--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -9,6 +9,7 @@ Description
 -->
 <html>
     <body>
+        <image align = "center" src = "med.png" alt ="Patient Medical Form" width = "300" id = "picture"></image>
         <h1> Patient Medical Form</h1> 
         <p>Today's Date: <span id="date"></span></p>
             <head>
