--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -145,9 +145,9 @@ Description
         <label for = "user">Username:</label>
             <input type = "text" id = "user" name = "user"><br><br>
                 <label for = "pass">Password:</label>
-                    <input type = "text" id = "pass" name = "pass">
+                    <input type = "password" id = "pass" name = "pass">
                     <label for = "pass2">Confirm Password:</label>
-                <input type = "text" id = "pass2" name = "pass2"><br><br>
+                <input type = "password" id = "pass2" name = "pass2"><br><br>
           
         <input type = "reset" value = "Clear All">
         <input type = "submit" value = "Submit">
