--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -144,9 +144,9 @@ Description
         
         <label for = "email">Email Address:</label>
             <input type = "text" id = "email"><br><br>
-            
+
         <label for = "user">Username:</label>
-            <input type = "text" id = "user" name = "user"><br><br>
+            <input type = "text" id = "user" name = "user" maxlength= "20"><br><br>
                 <label for = "pass">Password:</label>
                     <input type = "password" id = "pass" name = "pass">
                     <label for = "pass2">Confirm Password:</label>
