--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -10,7 +10,7 @@ Description
 <html>
     <body>
         <image align = "center" src = "med.png" alt ="Patient Medical Form" width = "300" id = "picture"></image>
-        <h1> Patient Medical Form</h1> 
+        <h1> Nguyen Healthcare New Patient Form</h1> 
         <p>Today's Date: <span id="date"></span></p>
             <head>
                 <link rel = "stylesheet" href = "HW1CSS.css">
@@ -23,9 +23,9 @@ Description
         <label for = "fname">First Name /</label>
             <label for = "midname"> M.Initial /</label>
                 <label for = "laname"> Last Name /</label>
-                <input type = "text" id = "fname" name = "fname" required>
-            <input type = "text" id = "midname" name = "midname" placeholder = "Optional">
-        <input type = "text" id = "lname" name = "lname" required><br><br>
+                <input type = "text" id = "fname" name = "fname" maxlength = "30" required>
+            <input type = "text" id = "midname" name = "midname" maxlength = "1" placeholder = "Optional">
+        <input type = "text" id = "lname" name = "lname" maxlength = "30" required><br><br>
 
         <label for = "bdate">Date of Birth: </label>
             <input type = "text" id = "bdate" placeholder="MM/DD/YYYY" required><br><br>
@@ -52,7 +52,7 @@ Description
             <input type = "text" id = "phone" placeholder ="(281)242-6789"><br><br>
 
         <label for ="ss">Social Security:</label>
-            <input type = "text" id = "ss" placeholder ="123-45-6789"><br><br>
+            <input type = "password" id = "ss" placeholder ="123-45-6789"><br><br>
 
         <label for = "address">Address Line 1:</label>
             <input type = "text" id = "address1"><br><br>
@@ -142,6 +142,9 @@ Description
         <label for = "range">Mental Health Assessment:</label><br>
             1<input type = "range" min = "1" max= "10" value = "5">10<br><br>
         
+        <label for= "note">Additional Notes:</label><br>
+            <input type = "text" id = "note" style = "width: 200px; height: 100px"><br><br>
+
         <label for = "email">Email Address:</label>
             <input type = "text" id = "email"><br><br>
 
