--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -143,7 +143,7 @@ Description
             1<input type = "range" min = "1" max= "10" value = "5">10<br><br>
         
         <label for= "note">Additional Notes:</label><br>
-            <input type = "text" id = "note" style = "width: 200px; height: 100px"><br><br>
+            <input type = "text" id = "note"><br><br>
 
         <label for = "email">Email Address:</label>
             <input type = "text" id = "email"><br><br>
