--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -14,12 +14,13 @@ Description
         <p>Today's Date: <span id="date"></span></p>
             <head>
                 <link rel = "stylesheet" href = "HW1CSS.css">
+                
                 <link rel = "stylesheet" href = "med.png">
             </head>
         <script>
             document.getElementById("date").innerHTML = new Date().toLocaleDateString();
         </script>  
-    <form>
+    <form action = "Hw1Thank_You.html">
         <label for = "fname">First Name /</label>
             <label for = "midname"> M.Initial /</label>
                 <label for = "laname"> Last Name /</label>
