--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -19,7 +19,7 @@ Description
         <p>Today's Date: <span id="date"></span></p>
             
         <script>
-            document.getElementById("today").innerHTML = new Date().toLocaleDateString();
+            document.getElementById("date").innerHTML = new Date().toLocaleDateString();
         </script>  
     <form action = "Hw1Thank_You.html">
         <label for = "fname">First Name /</label>
