--- a/TP_Assignment1.html
+++ b/TP_Assignment1.html
@@ -50,7 +50,7 @@ Description
                         <input type = "radio" id = "separated" name = "relations" value = "separated">
                         <label for = "separated">Separated</label><br><br>
 
-        <label for ="phone">Social Security:</label>
+        <label for ="phone">Phone #:</label>
             <input type = "text" id = "phone" placeholder ="(281)242-6789"><br><br>
 
         <label for ="ss">Social Security:</label>
