--- a/Hw1/TP_Assignment1.html
+++ b/Hw1/TP_Assignment1.html
@@ -23,33 +23,35 @@ Description
         </script>  
         <table>
     <form action = "Hw1Thank_You.html">
-        <tr><td><label for = "fname">First Name /</label>
-            <label for = "midname"> M.Initial /</label>
-                <label for = "laname"> Last Name /</label>
-                <input type = "text" id = "fname" name = "fname" maxlength = "30" required>
+        <tr>
+            <td><label for = "fullname">First Name / M.Initial / Last Name /</label></td>
+                <td><input type = "text" id = "fname" name = "fname" maxlength = "30" required>
             <input type = "text" id = "midname" name = "midname" maxlength = "1" placeholder = "Optional">
-        <input type = "text" id = "lname" name = "lname" maxlength = "30" required></tr></td>
+        <input type = "text" id = "lname" name = "lname" maxlength = "30" required></td></tr>
 
-        <tr><td><label for = "bdate">Date of Birth: </label>
-            <input type = "text" id = "bdate" placeholder="MM/DD/YYYY" required></tr></td>
+        <tr>
+            <td><label for = "bdate">Date of Birth: </label></td>
+            <td><input type = "text" id = "bdate" placeholder="MM/DD/YYYY" required></td></tr>
 
-        <tr><td><label for = "gender"> Sex:</label>
-            <input type = "radio" id = "m" name = "gender" value = "Male" required>
+        <tr>
+            <td><label for = "gender"> Sex:</label></td>
+            <td><input type = "radio" id = "m" name = "gender" value = "Male" required>
             <label for = "m">Male</label>
                 <input type = "radio" id = "f" name = "gender" value = "Female">
                 <label for = "f">Female</label>
                     <input type = "radio" id = "?" name = "gender" value = "Other">
-                    <label for = "?">Other</label></tr></td>
+                    <label for = "?">Other</label></td></tr>
         
-        <tr><td><label for = "relations">Marital Status:</label>
-            <input type = "radio" id = "single" name = "relations" value = "single">
+        <tr>
+            <td><label for = "relations">Marital Status:</label></td>
+            <td><input type = "radio" id = "single" name = "relations" value = "single">
             <label for = "single">Single</label>
                 <input type = "radio" id = "married" name = "relations" value = "married">
                 <label for = "married">Married</label>
                     <input type = "radio" id = "widowed" name = "relations" value = "widowed">
                     <label for = "widowed">Widowed</label>
                         <input type = "radio" id = "separated" name = "relations" value = "separated">
-                        <label for = "separated">Separated</label></tr></td>
+                        <label for = "separated">Separated</label></td></tr>
 
         <tr><td><label for ="phone">Phone #:</label>
             <input type = "text" id = "phone" placeholder ="(281)242-6789"></tr></td>
