--- a/Hw1/footer.html
+++ b/Hw1/footer.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
     <html>
-        <body>
+        <head>
+            <style>
+                footer {
+                    text-align: center;
+                }
+                .foot { 
+                     display: flex;
+                    flex-direction: column; 
+                    min-height: 100vh; 
+                    justify-content: flex-end; bottom */
+                }
+            </style>
+        </head>
 
-        <footer>
-            <p>Nguyen Healthcare<br>
-            <p>Contact us</p>
-            <a href= "https://www.youtube.com/watch?v=Aq5WXmQQooo">NguHealthServ.com</a></p>
-        </footer>
-
+            <body>
+                <div class = "foot">
+             <footer>
+                <p>Nguyen Healthcare<br>
+                <p>Contact us</p>
+                <a href= "https://www.youtube.com/watch?v=Aq5WXmQQooo">NguHealthService@gmailcom</a></p>
+            </footer>
+            </div>
         </body>
     </html>
