--- a/Hw1/TP_Assignment1.html
+++ b/Hw1/TP_Assignment1.html
@@ -11,6 +11,7 @@ Description
     <head>
         <link rel = "stylesheet" href = "HW1CSS.css">
         <link rel = "stylesheet" href = "med.png">
+        <link href = "footer.html"
     </head>
     
     <body>
