--- a/Hw1/footer.html
+++ b/Hw1/footer.html
@@ -9,7 +9,7 @@
                      display: flex;
                     flex-direction: column; 
                     min-height: 100vh; 
-                    justify-content: flex-end; bottom */
+                    justify-content: flex-end;
                 }
             </style>
         </head>
