--- a/Hw1/TP_Assignment1.html
+++ b/Hw1/TP_Assignment1.html
@@ -11,7 +11,6 @@ Description
     <head>
         <link rel = "stylesheet" href = "HW1CSS.css">
         <link rel = "stylesheet" href = "med.png">
-        <link rel = "stylesheet" href = "footer.html">
     </head>
     
     <body>
@@ -21,7 +20,15 @@ Description
             
         <script>
             document.getElementById("date").innerHTML = new Date().toLocaleDateString();
-        </script>  
+        </script>
+        <script>
+            fetch("footer.html")
+            .then(response => response.text())
+            .then(data => {
+            document.getElementById("footer").innerHTML = data;
+            });
+        </script>
+  
         <table>
     <form action = "Hw1Thank_You.html">
         <tr>
