--- a/Hw1/TP_Assignment1.html
+++ b/Hw1/TP_Assignment1.html
@@ -21,14 +21,9 @@ Description
         <script>
             document.getElementById("date").innerHTML = new Date().toLocaleDateString();
         </script>
-        <script>
-            fetch("footer.html")
-            .then(response => response.text())
-            .then(data => {
-            document.getElementById("footer").innerHTML = data;
-            });
-        </script>
-  
+        
+        <iframe src="header.html" width="100%" height="100"></iframe>
+    
         <table>
     <form action = "Hw1Thank_You.html">
         <tr>
