--- a/Hw1/TP_Assignment1.html
+++ b/Hw1/TP_Assignment1.html
@@ -22,7 +22,7 @@ Description
             document.getElementById("date").innerHTML = new Date().toLocaleDateString();
         </script>
         
-        <iframe src="header.html" width="100%" height="100"></iframe>
+        <iframe src="footer.html" width="100%" height="100"></iframe>
     
         <table>
     <form action = "Hw1Thank_You.html">
