--- a/Hw1/TP_Assignment1.html
+++ b/Hw1/TP_Assignment1.html
@@ -21,6 +21,9 @@ Description
         <script>
             document.getElementById("date").innerHTML = new Date().toLocaleDateString();
         </script>
+        <script>
+            fetch("footer.html");
+        </script>
         
         <iframe src="footer.html" width="100%" height="100"></iframe>
     
