--- a/Hw1/footer.html
+++ b/Hw1/footer.html
@@ -1,25 +1,10 @@
-<!DOCTYPE html>
-    <html>
-        <head>
-            <style>
-                footer {
-                    text-align: center;
-                }
-                .foot { 
-                     display: flex;
-                    flex-direction: column; 
-                    min-height: 100vh; 
-                    justify-content: flex-end;
-                }
-            </style>
-        </head>
-
-            <body>
-                <div class = "foot">
-             <footer>
-                <p>Nguyen Healthcare<br>
+<html>
+    <body>
+        <div class = "foot">
+            <footer>
+                <p>Nguyen Healthcare</p>
                 <p>Contact us</p>
-                <a href= "https://www.youtube.com/watch?v=Aq5WXmQQooo">NguHealthService@gmailcom</a></p>
+                <a href= "https://www.youtube.com/watch?v=Aq5WXmQQooo">NguHealthService@gmail.com</a></p>
             </footer>
             </div>
         </body>
