--- a/Hw1/Hw1Thank_You.html
+++ b/Hw1/Hw1Thank_You.html
@@ -13,5 +13,11 @@
             <p>for choosing
             <p>Nguyen Med</p>
             <p>We will see you soon</p>
+
+            <footer>
+                <p>Nguyen Healthcare</p>
+                <p>Contact us</p>
+                <a href= "https://www.youtube.com/watch?v=Aq5WXmQQooo">NguHealthService@gmail.com</a></p>
+            </footer>   
         </body>
     </html>
