--- a/Hw1/Hw1Thank_You.html
+++ b/Hw1/Hw1Thank_You.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html>    
+    <html>   
         <head>
             <style>
                  h1 {text-align: center;}
@@ -9,15 +9,17 @@
         </head>
         
         <body>
-            <h1>THANK YOU</h1>
-            <p>for choosing
-            <p>Nguyen Med</p>
-            <p>We will see you soon</p>
-
-            <footer>
-                <p>Nguyen Healthcare</p>
-                <p>Contact us</p>
-                <a href= "https://www.youtube.com/watch?v=Aq5WXmQQooo">NguHealthService@gmail.com</a></p>
-            </footer>   
+                <h1>THANK YOU</h1>
+                <p>for choosing</p>
+                <p>Nguyen Med</p>
+                <p>We will see you soon</p>
+            
+            <div class = "foot">
+                <footer>
+                    <p>Nguyen Healthcare</p>
+                    <p>Contact us</p>
+                    <a href= "https://www.youtube.com/watch?v=Aq5WXmQQooo">NguHealthService@gmail.com</a>
+                </footer>   
+            </div>
         </body>
     </html>
