--- a/Hw1/TP_Assignment1.html
+++ b/Hw1/TP_Assignment1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!--
-Program
-Author
-Date Created
-Date last edited
-Version
-Description
+Program: TP_Assignment1.html
+Author: Andrew Nguyen
+Date Created: 2026-02-04
+Date last edited 2026-02-27
+Version - 7.0
+Description - This medical form is a assignment for MIS3371. This form is meant to teach us the basics of and css.
 -->
 <html>
     <head>
@@ -65,10 +65,10 @@ Description
 
         <tr>
             <td><label for = "address">Address Line 1:</label></td>
-            <td><input type = "text" id = "address1" required></td></tr>
+            <td><input type = "text" id = "address1" maxlength = "30" required></td></tr>
                 <tr>
                 <td><label for = "address">Address Line 2:</label></td>
-                    <td><input type = "text" id = "address2"></tr></td>
+                    <td><input type = "text" id = "address2" maxlength = "30"></tr></td>
 
         <tr>
             <td><label for = "city">City:</label>
